# skawr-auth

./: .gitignore  MIGRATION_GUIDE.md  PUBLISHING_GUIDE.md  README.md
.github/workflows/: deploy-auth.yml
backend/: Dockerfile  pyproject.toml
backend/skawr_auth/: __init__.py  main.py
backend/skawr_auth/endpoints/: __init__.py  auth.py  projects.py
backend/skawr_auth/middleware/: api_key_auth.py
backend/skawr_auth/models/: __init__.py  base.py  project.py  user.py
backend/skawr_auth/schemas/: __init__.py  auth.py  project.py
backend/skawr_auth/utils/: auth.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/src/: index.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/types/: auth.ts
frontend/src/utils/: auth-client.ts
